@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2015-2021  Hybird
+#    Copyright (C) 2015-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -37,5 +37,6 @@ class MobileConfig(CremeAppConfig):
         from . import setting_keys
 
         setting_key_registry.register(
-            setting_keys.LOCATION_MAP_URL,
+            # setting_keys.LOCATION_MAP_URL,
+            setting_keys.location_map_url_key,
         )
